--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/theme-tools": "^1.3.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "classnames": "2.3.1",
     "date-fns": "2.21.3",
+    "framer-motion": "^6",
     "gray-matter": "4.0.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "typescript": "^4.2.4"
