--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^17.0.5",
     "autoprefixer": "10.4.0",
     "postcss": "8.4.5",
+    "prettier": "^2.6.2",
     "tailwindcss": "3.0.5"
   }
 }
