--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "autoprefixer": "10.4.0",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "^12.1.5",
     "postcss": "8.4.5",
     "prettier": "^2.6.2",
     "tailwindcss": "3.0.5"
