--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "classnames": "2.3.1",
-    "date-fns": "2.21.3",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6",
     "gray-matter": "4.0.3",
     "next": "latest",
