--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "typescript": "^4.2.4"
@@ -28,6 +30,7 @@
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-syntax-highlighter": "^15.5.1",
     "autoprefixer": "10.4.0",
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
